--- a/apps/docs/src/content/docs/api-reference/define-flow.mdx
+++ b/apps/docs/src/content/docs/api-reference/define-flow.mdx
@@ -65,7 +65,7 @@ Chain method to add runtime configuration with a specific context type. This is 
 ```
 
 **When to use:**
-- ✅ Use when you need context-driven branching (resolvers)
+- ✅ Use when you need context-driven navigation (resolvers)
 - ✅ Use when you need state migrations (versioning)
 - ✅ Use to explicitly type your context with `TContext`
 - ❌ Not needed for simple linear flows without branching
@@ -372,6 +372,6 @@ defineFlow({
 
 - [Flow Component](/api-reference/flow-component) - Render flows
 - [useFlow Hook](/api-reference/use-flow) - Access flow state
-- [Type Safety](/getting-started/typescript) - TypeScript guide
+- [Type Safety](/getting-started/type-safety) - Type Safety guide
 - [Migrations](/guides/migrations) - Version management
 
