--- a/apps/docs/src/content/docs/api-reference/index.mdx
+++ b/apps/docs/src/content/docs/api-reference/index.mdx
@@ -49,4 +49,4 @@ Comprehensive TypeScript types for type-safe flow development:
 - `MigrateFunction<TContext>` - Migration function type
 - `ResolveFunction` - Branching resolver type
 
-See the [TypeScript guide](/getting-started/typescript) for detailed type information.
+See the [Type Safety guide](/getting-started/type-safety) for detailed type information.
