--- a/apps/docs/src/content/docs/api-reference/storage-stores.mdx
+++ b/apps/docs/src/content/docs/api-reference/storage-stores.mdx
@@ -59,7 +59,7 @@ const store = createMemoryStore();
 - No storage limits
 - Synchronous API
 
-### React native store
+### React Native store
 
 ```typescript
 import AsyncStorage from "@react-native-async-storage/async-storage";
