--- a/apps/docs/src/content/docs/api-reference/use-flow.mdx
+++ b/apps/docs/src/content/docs/api-reference/use-flow.mdx
@@ -208,7 +208,7 @@ function BranchStep() {
   
   return (
     <div>
-      {/* Component-driven branching */}
+      {/* Component-driven navigation */}
       <button onClick={() => next("option1")}>
         Choose Option 1
       </button>
