--- a/apps/docs/src/content/docs/core-concepts/index.mdx
+++ b/apps/docs/src/content/docs/core-concepts/index.mdx
@@ -242,5 +242,5 @@ Now that you understand the core concepts, dive deeper into each one:
 
 Or jump to practical guides:
 - [Building Linear Flows](/guides/linear-flows)
-- [Adding Branching Logic](/guides/branching)
+- [Adding Branching Logic](/guides/branching-flows)
 - [Persisting Flow State](/guides/persistence)
