--- a/apps/docs/src/content/docs/core-concepts/steps.mdx
+++ b/apps/docs/src/content/docs/core-concepts/steps.mdx
@@ -737,4 +737,4 @@ back();
 - [**Context**](/core-concepts/context) - Manage shared state across steps
 - [**Navigation**](/core-concepts/navigation) - Advanced navigation patterns
 - [**Linear Flows Guide**](/guides/linear-flows) - Build simple linear flows
-- [**Branching Guide**](/guides/branching) - Implement conditional logic
+- [**Branching Flows**](/guides/branching-flows) - Implement conditional logic
