--- a/apps/docs/src/content/docs/getting-started/decision-guide.mdx
+++ b/apps/docs/src/content/docs/getting-started/decision-guide.mdx
@@ -139,7 +139,7 @@ Ask yourself these questions:
 
 ## Real-world examples
 
-### Great useflow use cases
+### Great useFlow use cases
 
 **E-commerce Checkout**
 
@@ -185,7 +185,7 @@ const onboardingFlow = defineFlow({
 - ✅ Skip steps for returning users
 - ✅ Measure onboarding completion rates
 
-### Poor useflow use cases
+### Poor useFlow use cases
 
 **Contact Form**
 
@@ -309,5 +309,5 @@ Ready to get started?
 Still evaluating?
 
 - [**Why useFlow?**](/getting-started/why-useflow) - Detailed comparison with alternatives
-- [**TypeScript Guide**](/getting-started/typescript) - See the type safety benefits
+- [**Type Safety Guide**](/getting-started/type-safety) - See the type safety benefits
 - [**Troubleshooting**](/guides/troubleshooting) - Common questions answered
