--- a/apps/docs/src/content/docs/getting-started/quick-start.mdx
+++ b/apps/docs/src/content/docs/getting-started/quick-start.mdx
@@ -328,14 +328,14 @@ Now that you've built your first flow, explore more advanced features:
 
 <CardGrid>
   <LinkCard
-    title="TypeScript"
+    title="Type Safety"
     description="Get full type safety for your flows"
-    href="/getting-started/typescript"
+    href="/getting-started/type-safety"
   />
   <LinkCard
     title="Branching"
     description="Learn conditional navigation"
-    href="/guides/branching"
+    href="/guides/branching-flows"
   />
   <LinkCard
     title="Persistence"
