--- a/apps/docs/src/content/docs/guides/global-configuration.mdx
+++ b/apps/docs/src/content/docs/guides/global-configuration.mdx
@@ -5,7 +5,7 @@ description: Learn how to configure default settings for all flows in your appli
 
 The `FlowProvider` component allows you to configure default settings for all flows in your application. Individual flows can override these defaults when needed, giving you centralized configuration with flexibility.
 
-## Why use flowprovider?
+## Why use `FlowProvider`?
 
 Without `FlowProvider`, you configure each flow individually:
 
@@ -617,5 +617,5 @@ export function OnboardingFlow() {
 - [Persistence](/guides/persistence) - Learn about persistence configuration
 - [Callbacks](/guides/callbacks) - Deep dive into flow callbacks
 - [Testing](/guides/testing) - Test flows with global configuration
-- [TypeScript](/getting-started/typescript) - Type-safe configuration
+- [TypeScript](/getting-started/type-safety) - Type-safe configuration
 
