--- a/apps/docs/src/content/docs/guides/linear-flows.mdx
+++ b/apps/docs/src/content/docs/guides/linear-flows.mdx
@@ -684,7 +684,7 @@ function ProgressBar({ currentStep }: { currentStep: string }) {
 
 ## Next steps
 
-- [**Branching Guide**](/guides/branching) - Add conditional logic
+- [**Branching Flows**](/guides/branching-flows) - Add conditional logic
 - [**Persistence Guide**](/guides/persistence) - Save user progress
 - [**Context**](/core-concepts/context) - Manage shared state
 - [**Navigation**](/core-concepts/navigation) - Control flow movement
