--- a/apps/docs/src/content/docs/recipes/onboarding.mdx
+++ b/apps/docs/src/content/docs/recipes/onboarding.mdx
@@ -571,8 +571,8 @@ const persister = createPersister({
 
 ## Next steps
 
-- [Form Validation Recipe](/recipes/form-validation)
 - [Multi-Step Checkout](/recipes/checkout)
 - [Survey Flow](/recipes/survey)
 - [Persistence Guide](/guides/persistence)
+- [Testing Guide](/guides/testing)
 
