--- a/apps/docs/src/content/docs/recipes/survey.mdx
+++ b/apps/docs/src/content/docs/recipes/survey.mdx
@@ -539,10 +539,10 @@ export function MultipleChoiceQuestion({
 }
 ```
 
-### Conditional routing
+### Conditional navigation
 
 ```tsx
-// Route based on answer
+// Navigate based on answer
 type ConditionalContext = {
   q1_answer: "yes" | "no";
 };
@@ -567,7 +567,7 @@ const surveyFlow = defineFlow({
 ## Next steps
 
 - [Onboarding Flow](/recipes/onboarding)
-- [Branching Guide](/guides/branching)
+- [Branching Flows](/guides/branching-flows)
 - [Callbacks Guide](/guides/callbacks)
 - [Testing Guide](/guides/testing)
 
