--- a/apps/docs/src/content/docs/core-concepts/navigation.mdx
+++ b/apps/docs/src/content/docs/core-concepts/navigation.mdx
@@ -845,5 +845,5 @@ Use callbacks for analytics:
 
 - [**Flows**](/core-concepts/flows) - Define flow structure and transitions
 - [**Context**](/core-concepts/context) - Manage shared state
-- [**Branching Guide**](/guides/branching) - Implement conditional navigation
+- [**Branching Flows**](/guides/branching-flows) - Implement conditional navigation
 - [**Linear Flows Guide**](/guides/linear-flows) - Build simple flows
