--- a/apps/docs/src/content/docs/getting-started/installation.mdx
+++ b/apps/docs/src/content/docs/getting-started/installation.mdx
@@ -59,5 +59,5 @@ useFlow is written in TypeScript and includes type definitions out of the box. N
 Check out the [Quick Start](/getting-started/quick-start) guide to create a working onboarding flow in 5 minutes.
 
 Other resources:
-- [TypeScript](/getting-started/typescript) - Get full type safety for your flows
+- [Type Safety](/getting-started/type-safety) - Get full type safety for your flows
 - [Core Concepts](/core-concepts/) - Understand flows, steps, and context
