--- a/apps/docs/src/content/docs/getting-started/overview.mdx
+++ b/apps/docs/src/content/docs/getting-started/overview.mdx
@@ -6,7 +6,8 @@ description: Get started with useFlow - the type-safe way to build multi-step fl
 import { Tabs, TabItem, Aside, LinkCard, CardGrid, Badge } from '@astrojs/starlight/components';
 import { REPO_ISSUES_URL } from '../../../constants';
 
-useFlow is a declarative, type-safe library for building multi-step flows in React with **built-in persistence**. Whether you're building onboarding, checkout, surveys, or wizards, useFlow eliminates the complexity while providing exceptional developer experience.
+useFlow is a declarative, type-safe library for building multi-step flows in React with **built-in persistence**.
+Whether you're building onboarding, checkout, surveys, or wizards, useFlow eliminates the complexity while providing exceptional developer experience.
 
 ## Quick example
 
@@ -62,7 +63,7 @@ function App() {
 
 🔒 **Type-Safe** - TypeScript knows which steps can navigate where
 
-🔄 **Smart Navigation** - Linear, branching, or component-driven routing
+🔄 **Smart Navigation** - Linear, branching, or component-driven navigation
 
 💾 **Persistence Built-in** - Save and restore progress automatically
 
@@ -158,9 +159,9 @@ next("confirm");   // ❌ Error: Can't skip to confirm from cart
     href="/getting-started/quick-start"
   />
   <LinkCard
-    title="TypeScript"
+    title="Type Safety"
     description="Leverage powerful type safety"
-    href="/getting-started/typescript"
+    href="/getting-started/type-safety"
   />
   <LinkCard
     title="Recipes"
