--- a/apps/docs/src/content/docs/getting-started/why-useflow.mdx
+++ b/apps/docs/src/content/docs/getting-started/why-useflow.mdx
@@ -66,7 +66,7 @@ function OnboardingFlow() {
 - ❌ **Testing complexity** - Mocking all that state logic
 - ❌ **New developer confusion** - "Where does this flow go?"
 
-## The useflow solution
+## The useFlow solution
 
 **Same functionality, 80% less code, with superpowers built-in:**
 
@@ -101,8 +101,10 @@ function App() {
         profile: <ProfileStep />,
         preferences: <PreferencesStep />,
         complete: <CompleteStep />
-  })}
-</Flow>
+      })}
+    </Flow>
+  );
+}
 ```
 
 ## What you get out of the box
@@ -189,7 +191,7 @@ defineFlow({
 
 No nested ifs, no complex state machines. Just declare the branches.
 
-## When to use useflow
+## When to use useFlow
 
 ### Perfect for
 
